--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ footer {
 .item-wrap .item-title h2 {
     font-size: 30px;
     margin-bottom: 30px;
-    color: ;
+    color: #000;
 }
 
 .item-wrap .item-content .item-input {
